--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,31 @@
     <link href="style.css" rel="stylesheet" type="text/css" >
   </head>
   <body>
-    <div id="container">
-      <div id="search-bar">Search</div>
-      <div id="location">Location</div>
-      <div id="weather-summary">Weather</div>
-      <div id="weather-extra">Extra</div>
+    <div class="container-fluid">
+      <div class="row" id="search-bar">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-1">Search</div>
+            <div class="col-md-10">Search</div>
+            <div class="col-md-1">Search</div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">Location</div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">Weather</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">Extra</div>
+            <div class="col-md-4">Extra</div>
+            <div class="col-md-4">Extra</div>
+          </div>
+        </div>
+        <div class="col-md-2">
+        </div>
+      </div>
     </div>
   </body>
   <!-- jQuery -->
