--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
   <body>
     <div class="container-fluid">
       <div class="row" id="search-bar">
-        <div class="col-md-2">
-        </div>
+        <div class="col-md-2"></div>
         <div class="col-md-8">
           <div class="row">
             <div class="col-md-1">Search</div>
@@ -34,8 +33,7 @@
             <div class="col-md-4">Extra</div>
           </div>
         </div>
-        <div class="col-md-2">
-        </div>
+        <div class="col-md-2"></div>
       </div>
     </div>
   </body>
