--- a/src/index.html
+++ b/src/index.html
@@ -17,20 +17,31 @@
         <div class="col-md-2"></div>
         <div class="col-md-8">
           <div class="row">
-            <div class="col-md-1">Search</div>
-            <div class="col-md-10">Search</div>
-            <div class="col-md-1">Search</div>
+            <div class="col-md-1">Get location</div>
+            <div class="col-md-10">Search bar</div>
+            <div class="col-md-1">Toggle C/F</div>
           </div>
           <div class="row">
-            <div class="col-md-12">Location</div>
+            <div class="col-md-12">
+              <h1>LONDON</h1>
+              <h4>17:00pm</h4>              
+            </div>
           </div>
           <div class="row">
-            <div class="col-md-12">Weather</div>
+            <div class="col-md-6">ICON</div>
+            <div class="col-md-6"><h1>20oC</h1></div>
+            <div class="col-md-12"><h2>Sunny</h2></div>
           </div>
           <div class="row">
-            <div class="col-md-4">Extra</div>
-            <div class="col-md-4">Extra</div>
-            <div class="col-md-4">Extra</div>
+            <div class="col-md-4">
+              <h4>Wind</h4>
+            </div>
+            <div class="col-md-4">
+              <h4>Rain</h4>
+            </div>
+            <div class="col-md-4">
+              <h4>Humdity</h4>
+            </div>
           </div>
         </div>
         <div class="col-md-2"></div>
