--- a/src/index.html
+++ b/src/index.html
@@ -13,35 +13,45 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row" id="search-bar">
+      <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
+          <!-- Search bar -->
           <div class="row">
             <div class="col-md-1">Get location</div>
             <div class="col-md-10">Search bar</div>
             <div class="col-md-1">Toggle C/F</div>
           </div>
+          <!-- Location -->
           <div class="row">
             <div class="col-md-12">
-              <h1>LONDON</h1>
+              <h2>LONDON</h2>
               <h4>17:00pm</h4>              
             </div>
           </div>
+          <!-- Weather summary -->
           <div class="row">
-            <div class="col-md-6">ICON</div>
-            <div class="col-md-6"><h1>20oC</h1></div>
-            <div class="col-md-12"><h2>Sunny</h2></div>
+            <div class="col-md-3"></div>
+            <div class="col-md-3">ICON</div>
+            <div class="col-md-3"><h1>20oC</h1></div>
+            <div class="col-md-3"></div>
+            <div class="col-md-12"><h3>Sunny</h3></div>
           </div>
           <div class="row">
-            <div class="col-md-4">
-              <h4>Wind</h4>
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+              <!-- Weather extra info -->
+              <div class="col-md-4">
+                <h5>Wind</h5>
+              </div>
+              <div class="col-md-4">
+                <h5>Rain</h5>
+              </div>
+              <div class="col-md-4">
+                <h5>Humdity</h5>
+              </div>
             </div>
-            <div class="col-md-4">
-              <h4>Rain</h4>
-            </div>
-            <div class="col-md-4">
-              <h4>Humdity</h4>
-            </div>
+            <div class="col-md-1"></div>
           </div>
         </div>
         <div class="col-md-2"></div>
