--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-3">ICON</div>
-            <div class="col-md-3"><h1>20oC</h1></div>
+            <div class="col-md-3"><h1>20°C</h1></div>
             <div class="col-md-3"></div>
             <div class="col-md-12"><h3>Sunny</h3></div>
           </div>
@@ -59,7 +59,7 @@
     </div>
   </body>
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.0.0.js" integrity="sha256-jrPLZ+8vDxt2FnE1zvZXCkCcebI/C8Dt5xyaQBjxQIo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
   <!-- Bootstrap JS -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <!-- JS -->
