--- a/src/index.html
+++ b/src/index.html
@@ -29,18 +29,19 @@
               <h4>17:00pm</h4>              
             </div>
           </div>
-          <!-- Weather summary -->
+          <!-- Weather icon & temp -->
           <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-3">ICON</div>
-            <div class="col-md-3"><h1>20°C</h1></div>
-            <div class="col-md-3"></div>
+            <div class="col-md-6">ICON</div>
+            <div class="col-md-6"><h1>20°C</h1></div>
+          </div>
+          <!-- Weather description -->
+          <div class="row">
             <div class="col-md-12"><h3>Sunny</h3></div>
           </div>
           <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-              <!-- Weather extra info -->
+              <!-- Weather extra -->
               <div class="col-md-4">
                 <h5>Wind</h5>
               </div>
@@ -52,6 +53,10 @@
               </div>
             </div>
             <div class="col-md-1"></div>
+          </div>
+          <!-- Footer -->
+          <div class="row">
+            <p>Weather API by <a href="http://openweathermap.org/">OpenWeatherMap</a></p>
           </div>
         </div>
         <div class="col-md-2"></div>
