--- a/src/index.html
+++ b/src/index.html
@@ -25,31 +25,31 @@
           <!-- Location -->
           <div class="row">
             <div class="col-md-12">
-              <h2>LONDON</h2>
-              <h4>17:00pm</h4>              
+              <h2>Location</h2>
+              <h4>Time</h4>              
             </div>
           </div>
           <!-- Weather icon & temp -->
           <div class="row">
-            <div class="col-md-6">ICON</div>
-            <div class="col-md-6"><h1>20°C</h1></div>
+            <div class="col-md-6">Icon</div>
+            <div class="col-md-6"><h1>Temp</h1></div>
           </div>
           <!-- Weather description -->
           <div class="row">
-            <div class="col-md-12"><h3>Sunny</h3></div>
+            <div class="col-md-12"><h3>Description</h3></div>
           </div>
           <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
               <!-- Weather extra -->
               <div class="col-md-4">
-                <h5>Wind</h5>
+                <p>Wind <span>data</span></p>
               </div>
               <div class="col-md-4">
-                <h5>Rain</h5>
+                <p>Rain <span>data</span></p>
               </div>
               <div class="col-md-4">
-                <h5>Humdity</h5>
+                <p>Humdity <span>data</span></p>
               </div>
             </div>
             <div class="col-md-1"></div>
