--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Local Weather</title>
+    <!-- Weather icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Bootstrap optional theme -->
@@ -31,7 +33,7 @@
           </div>
           <!-- Weather icon & temp -->
           <div class="row">
-            <div class="col-md-6">Icon</div>
+            <div class="col-md-6"><i class="wi wi-day-sunny"></i></div>
             <div class="col-md-6"><h1>Temp</h1></div>
           </div>
           <!-- Weather description -->
