Add weather icon

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           </div>
           <!-- Weather icon & temp -->
           <div class="row">
-            <div class="col-md-6"><i class="wi wi-day-sunny"></i></div>
+            <div class="col-md-6"><i></i></div>
             <div class="col-md-6"><h1>Temp</h1></div>
           </div>
           <!-- Weather description -->
