--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           <!-- Weather icon & temp -->
           <div class="row">
             <div class="col-md-6"><i></i></div>
-            <div class="col-md-6"><h1>Temp</h1></div>
+            <div class="col-md-6"><h1></h1></div>
           </div>
           <!-- Weather description -->
           <div class="row">
