Remove rain and add pressure info

--- a/src/index.html
+++ b/src/index.html
@@ -48,10 +48,10 @@
                 <p>Wind <span>data</span></p>
               </div>
               <div class="col-md-4">
-                <p>Rain <span>data</span></p>
+                <p>Humdity <span>data</span></p>
               </div>
               <div class="col-md-4">
-                <p>Humdity <span>data</span></p>
+                <p>Pressure <span>data</span></p>
               </div>
             </div>
             <div class="col-md-1"></div>
