--- a/src/index.html
+++ b/src/index.html
@@ -27,31 +27,37 @@
           <!-- Location -->
           <div class="row">
             <div class="col-md-12">
-              <h2>Location</h2>
-              <h4>Time</h4>              
+              <h1 id="location"></h1>
+              <p id="time"></p>
             </div>
           </div>
           <!-- Weather icon & temp -->
           <div class="row">
-            <div class="col-md-6"><i></i></div>
-            <div class="col-md-6"><h1></h1></div>
+            <div class="col-md-6">
+              <i id="icon"></i>
+            </div>
+            <div class="col-md-6">
+              <p id="temp"></p>
+            </div>
           </div>
           <!-- Weather description -->
           <div class="row">
-            <div class="col-md-12"><h3>Description</h3></div>
+            <div class="col-md-12">
+              <p id="description"></p>
+            </div>
           </div>
           <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
               <!-- Weather extra -->
               <div class="col-md-4">
-                <p>Wind <span>data</span></p>
+                <p>Wind <span id="wind"></span> units</p>
               </div>
               <div class="col-md-4">
-                <p>Humdity <span>data</span></p>
+                <p>Humdity <span id="humdity"></span> units</p>
               </div>
               <div class="col-md-4">
-                <p>Pressure <span>data</span></p>
+                <p>Pressure <span id="pressure"></span> units</p>
               </div>
             </div>
             <div class="col-md-1"></div>
