--- a/src/index.html
+++ b/src/index.html
@@ -51,13 +51,13 @@
             <div class="col-md-10">
               <!-- Weather extra -->
               <div class="col-md-4">
-                <p>Wind <span id="wind"></span> units</p>
+                <p>Wind <span id="wind"></span> m/s</p>
               </div>
               <div class="col-md-4">
-                <p>Humdity <span id="humdity"></span> units</p>
+                <p>Humdity <span id="humidity"></span> %</p>
               </div>
               <div class="col-md-4">
-                <p>Pressure <span id="pressure"></span> units</p>
+                <p>Pressure <span id="pressure"></span> hPa</p>
               </div>
             </div>
             <div class="col-md-1"></div>
