Add get current coords

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-8">
           <!-- Search bar -->
           <div class="row">
-            <div class="col-md-1">Get location</div>
+            <div class="col-md-1" id="getlocation">Get location</div>
             <div class="col-md-10">Search bar</div>
             <div class="col-md-1">Toggle C/F</div>
           </div>
