--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,23 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <!-- Search bar -->
-          <div class="row">
-            <div class="col-md-1" id="getlocation">Get location</div>
-            <div class="col-md-10">Search bar</div>
-            <div class="col-md-1">Toggle C/F</div>
-          </div>
+          <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="#">WEATHER</a>
+              </div>
+              <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="search city">
+                </div>
+                <button type="submit" class="btn btn-default">Search</button>
+              </form>
+
+              <button type="button" class="btn btn-default navbar-btn">Get location</button>
+              <button type="button" class="btn btn-default navbar-btn">C</button>
+              <button type="button" class="btn btn-default navbar-btn">F</button>
+            </div>
+          </nav>
           <!-- Location -->
           <div class="row">
             <div class="col-md-12">
