Add icons to navbar buttons

--- a/src/index.html
+++ b/src/index.html
@@ -20,19 +20,15 @@
         <div class="col-md-8">
           <nav class="navbar navbar-default">
             <div class="container-fluid">
-              <div class="navbar-header">
-                <a class="navbar-brand" href="#">WEATHER</a>
-              </div>
               <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="search city">
                 </div>
-                <button type="submit" class="btn btn-default">Search</button>
+                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
               </form>
-
-              <button type="button" class="btn btn-default navbar-btn">Get location</button>
-              <button type="button" class="btn btn-default navbar-btn">C</button>
-              <button type="button" class="btn btn-default navbar-btn">F</button>
+              <button type="button" class="btn btn-default navbar-btn navbar-right">F</button>
+              <button type="button" class="btn btn-default navbar-btn navbar-right">C</button>
             </div>
           </nav>
           <!-- Location -->
