Edit layout, reduce page width

--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,16 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
           <nav class="navbar navbar-default">
             <div class="container-fluid">
               <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="search city">
+                  <input type="text" class="form-control" placeholder="Search city">
                 </div>
                 <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
+                <button type="button" class="btn btn-default" id="getlocation"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
               </form>
               <button type="button" class="btn btn-default navbar-btn navbar-right">F</button>
               <button type="button" class="btn btn-default navbar-btn navbar-right">C</button>
@@ -74,7 +74,7 @@
             <p>Weather API by <a href="http://openweathermap.org/">OpenWeatherMap</a></p>
           </div>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-3"></div>
       </div>
     </div>
   </body>
