Refactor ajax request

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
                   <input type="text" class="form-control" placeholder="Search city">
                 </div>
                 <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                <button type="button" class="btn btn-default" id="getlocation"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
               </form>
+              <button type="button" class="btn btn-default navbar-btn" id="getlocation"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
               <button type="button" class="btn btn-default navbar-btn navbar-right">F</button>
               <button type="button" class="btn btn-default navbar-btn navbar-right">C</button>
             </div>
