Add toggle to convert temp

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
               </form>
               <button type="button" class="btn btn-default navbar-btn" id="getlocation"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
               <form class="navbar-form navbar-right">
-                <input type="checkbox" checked data-toggle="toggle" data-on="°C" data-off="°F">
+                <input type="checkbox" id="toggle" checked data-toggle="toggle" data-on="°C" data-off="°F">
               </form>
             </div>
           </nav>
