--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search city">
                 </div>
-                <button type="button" class="btn btn-default" id="searchbutton"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                <button type="submit" class="btn btn-default" id="searchbutton"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
               </form>
               <button type="button" class="btn btn-default navbar-btn" id="getlocation"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
               <form class="navbar-form navbar-right">
