Change wind speed units to mph

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             <div class="col-md-10">
               <!-- Weather extra -->
               <div class="col-md-4">
-                <p>Wind <span id="wind"></span> m/s</p>
+                <p>Wind <span id="wind"></span> mph</p>
               </div>
               <div class="col-md-4">
                 <p>Humdity <span id="humidity"></span> %</p>
