Add error alerts

--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,14 @@
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search city">
                 </div>
-                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                <button type="submit" class="btn btn-default">
+                  <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                </button>
               </form>
               <!-- Location button -->
-              <button type="button" class="btn btn-default navbar-btn" id="btn-location"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></button>
+              <button type="button" class="btn btn-default navbar-btn" id="btn-location">
+                <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+              </button>
               <!-- Toggle button -->
               <form class="navbar-form navbar-right">
                 <input type="checkbox" id="btn-toggle" checked data-toggle="toggle" data-on="°C" data-off="°F">
