Change position of country code

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,8 @@
           <!-- Location -->
           <div class="row">
             <div class="col-md-12">
-              <h1 id="info-location"></h1>
+              <h1 id="info-city"></h1>
+              <p id="info-country"></p>
             </div>
           </div>
           <!-- Weather icon & temp -->
