Add empty page on weather api fail

--- a/src/index.html
+++ b/src/index.html
@@ -44,43 +44,48 @@
               </form>
             </div>
           </nav>
-          <!-- Location -->
-          <div class="row">
+          <!-- Weather container -->
+          <div class="row" id="container-weather">
             <div class="col-md-12">
-              <h1 id="info-city"></h1>
-              <p id="info-country"></p>
-            </div>
-          </div>
-          <!-- Weather icon & temp -->
-          <div class="row">
-            <div class="col-md-6">
-              <i id="info-icon"></i>
-            </div>
-            <div class="col-md-6">
-              <p id="info-temp"></p>
-            </div>
-          </div>
-          <!-- Weather description -->
-          <div class="row">
-            <div class="col-md-12">
-              <p id="info-description"></p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-              <!-- Weather extra -->
-              <div class="col-md-4">
-                <p>Wind <span id="info-wind"></span> mph</p>
+              <!-- Location -->
+              <div class="row">
+                <div class="col-md-12">
+                  <h1 id="info-city"></h1>
+                  <p id="info-country"></p>
+                </div>
               </div>
-              <div class="col-md-4">
-                <p>Humdity <span id="info-humidity"></span> %</p>
+              <!-- Weather icon & temp -->
+              <div class="row">
+                <div class="col-md-6">
+                  <i id="info-icon"></i>
+                </div>
+                <div class="col-md-6">
+                  <p id="info-temp"></p>
+                </div>
               </div>
-              <div class="col-md-4">
-                <p>Pressure <span id="info-pressure"></span> hPa</p>
+              <!-- Weather description -->
+              <div class="row">
+                <div class="col-md-12">
+                  <p id="info-description"></p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10">
+                  <!-- Weather extra -->
+                  <div class="col-md-4">
+                    <p>Wind <span id="info-wind"></span> mph</p>
+                  </div>
+                  <div class="col-md-4">
+                    <p>Humdity <span id="info-humidity"></span> %</p>
+                  </div>
+                  <div class="col-md-4">
+                    <p>Pressure <span id="info-pressure"></span> hPa</p>
+                  </div>
+                </div>
+                <div class="col-md-1"></div>
               </div>
             </div>
-            <div class="col-md-1"></div>
           </div>
           <!-- Footer -->
           <div class="row">
