--- a/src/index.html
+++ b/src/index.html
@@ -48,31 +48,29 @@
           <div class="row" id="container-weather">
             <div class="col-md-12">
               <!-- Location -->
-              <div class="row">
+              <div class="row" id="container-location">
                 <div class="col-md-12">
                   <h1 id="info-city"></h1>
                   <p id="info-country"></p>
                 </div>
               </div>
               <!-- Weather icon & temp -->
-              <div class="row">
-                <div class="col-md-6">
+              <div class="row" id="container-icontemp">
+                <div class="col-md-12">
                   <i id="info-icon"></i>
-                </div>
-                <div class="col-md-6">
-                  <p id="info-temp"></p>
+                  <span id="info-temp"></span>
                 </div>
               </div>
               <!-- Weather description -->
-              <div class="row">
+              <div class="row" id="container-description">
                 <div class="col-md-12">
                   <p id="info-description"></p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-1"></div>
-                <div class="col-md-10">
-                  <!-- Weather extra -->
+                <!-- Weather extra -->
+                <div class="col-md-10" id="container-extra">
                   <div class="col-md-4">
                     <p>Wind <span id="info-wind"></span> mph</p>
                   </div>
